--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -43,12 +43,10 @@
                     <p:tab title="二维码生成">
                         <ui:include src="WEB-INF/gui/seed/qrGenerator.xhtml"/>
                     </p:tab>
-                    <p:tab title="大包扫码">
+                    <p:tab title="扫码打包">
                         <ui:include src="WEB-INF/gui/seed/packScanner.xhtml"/>
                     </p:tab>
-                    <p:tab title="批发商管理">
-                        <ui:include src="WEB-INF/gui/seed/wholesalers.xhtml"/>
-                    </p:tab>
+                   
                 </p:tabView>
             </h:panelGroup>
             <h:panelGroup layout="block" style="text-align: center; position: absolute; bottom: 0; width: 800px; height: 50px;">
