--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -52,6 +52,9 @@
                     <p:tab title="扫码打包">
                         <ui:include src="WEB-INF/gui/seed/packScanner.xhtml"/>
                     </p:tab>
+                    <p:tab title="销售出库">
+                        <ui:include src="WEB-INF/gui/seed/stockOut.xhtml"/>
+                    </p:tab>
                 </p:tabView>
             </h:panelGroup>
             <h:panelGroup layout="block" style="text-align: center; position: absolute; bottom: 0; width: 800px; height: 50px;">
