--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/packScanner.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/packScanner.xhtml
@@ -11,7 +11,7 @@
                     </p:column>
                     <p:column>
                         <p:spinner id="amount" value="#{packScanner.amount}"
-                                   size="3" min="20" max="200"/>
+                                   size="3" min="20" max="200" stepFactor="10"/>
                     </p:column>
                 </p:row>
                 <p:row>
