--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/stockOut.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/stockOut.xhtml
@@ -40,7 +40,7 @@
                 </p:row>
                 <p:row>
                     <p:column>
-                        <h:outputText value="批发商："/>
+                        <h:outputText value="经销商："/>
                     </p:column>
                     <p:column colspan="2">
                         <p:selectOneMenu id="salerInfo" value="#{stockOut.salerId}"
