--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -15,12 +15,12 @@
     </h:head>
     <h:body>
         <p:growl autoUpdate="true"/>
-        <h:panelGroup layout="block" style="margin: auto; width: 800px; height: 100%;">
-            <h:panelGroup layout="block" style="position: absolute; top: 0; width: 800px; height: 100px;">
+        <h:panelGroup layout="block" style="margin: auto; width: 1000px; height: 100%;">
+            <h:panelGroup layout="block" style="position: absolute; top: 0; width: 1000px; height: 100px;">
                 <h1 style="text-align: center;">中国种子二维码追溯系统</h1>
             </h:panelGroup>
             <h:panelGroup id="content" layout="block"
-                          style="position: absolute; top: 100px; bottom: 50px; width: 800px;">
+                          style="position: absolute; top: 100px; bottom: 50px; width: 1000px;">
                 <h:form rendered="#{!request.isUserInRole('user')}" style="height: 95%;">
                     <p:panelGrid columns="2" styleClass="transparent" style="margin: auto;">
                         <p:outputLabel for="user" value="用户："/>
@@ -40,10 +40,10 @@
                            rendered="#{request.isUserInRole('user')}"
                            onTabShow="tabShown(index);">
                     <p:ajax event="tabChange" listener="#{sessionData.tabChanged}"/>
-                    <p:tab title="种子登记">
+                    <p:tab title="种子信息管理">
                         <ui:include src="WEB-INF/gui/seed/seedRegister.xhtml"/>
                     </p:tab>
-                    <p:tab title="批发商管理">
+                    <p:tab title="经销商管理">
                         <ui:include src="WEB-INF/gui/seed/wholesalers.xhtml"/>
                     </p:tab>
                     <p:tab title="二维码生成">
@@ -55,9 +55,18 @@
                     <p:tab title="销售出库">
                         <ui:include src="WEB-INF/gui/seed/stockOut.xhtml"/>
                     </p:tab>
+                    <p:tab title="销售管理">
+                        <ui:include src="WEB-INF/gui/seed/more.xhtml"/>
+                    </p:tab>
+                    <p:tab title="零售商管理">
+                        <ui:include src="WEB-INF/gui/seed/more.xhtml"/>
+                    </p:tab>
+                    <p:tab title="农户管理">
+                        <ui:include src="WEB-INF/gui/seed/more.xhtml"/>
+                    </p:tab>
                 </p:tabView>
             </h:panelGroup>
-            <h:panelGroup layout="block" style="text-align: center; position: absolute; bottom: 0; width: 800px; height: 50px;">
+            <h:panelGroup layout="block" style="text-align: center; position: absolute; bottom: 0; width: 1000px; height: 50px;">
                 版权所有 © 2016 成都星楚物流有限公司
             </h:panelGroup>
         </h:panelGroup>
