--- a/seedqr/src/main/webapp/WEB-INF/gui/seed/packScanner.xhtml
+++ b/seedqr/src/main/webapp/WEB-INF/gui/seed/packScanner.xhtml
@@ -1,7 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition>
         <h:form prependId="false">
             <p:panelGrid styleClass="transparent" style="margin: auto;">
@@ -11,7 +12,9 @@
                     </p:column>
                     <p:column>
                         <p:spinner id="amount" value="#{packScanner.amount}"
-                                   size="3" min="20" max="200" stepFactor="10"/>
+                                   size="3" min="20" max="200" stepFactor="10">
+                            <p:ajax process="@this" update="amount"/>
+                        </p:spinner>
                     </p:column>
                 </p:row>
                 <p:row>
@@ -30,6 +33,20 @@
                                          oncomplete="PrimeFaces.focus('packCode');"/>
                     </p:column>
                 </p:row>
+                
+                <p:row>
+                    <p:column>
+                        <p:outputLabel for="selectSeedId" value="种子批次："/>
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="selectSeedId" value="#{packScanner.seedId}" 
+                                             style="font-size: 90%;">
+                            <f:selectItems value="#{seedRegister.seeds}"
+                                           var="seed" itemLabel="#{seed.seedUiDisplay}" itemValue="#{seed.id}"/>
+                        </p:selectOneMenu>
+                    </p:column>
+                </p:row>
+                
                 <p:row>
                     <p:column>
                         <p:outputLabel for="bulkPackCode" value="大包条码："/>
