--- a/seedqr/src/main/webapp/index.xhtml
+++ b/seedqr/src/main/webapp/index.xhtml
@@ -12,14 +12,14 @@
                 PrimeFaces.focus('packCodeInputForPackage');
             }
             function disableEnter() {
-                if(event.keyCode == 13) {
+                if(event.keyCode === 13) {
                     return false;
                 }
                 return true;
             }
             
             function codeInputKeyup() {
-                if (event.keyCode == 13) {
+                if (event.keyCode === 13) {
                     var inputValue = document.getElementById("packCodeInputForPackage").value;
                     console.log(inputValue);
                     if (inputValue.indexOf("id") > 0) {
@@ -34,12 +34,13 @@
     </h:head>
     <h:body>
         <p:growl autoUpdate="true"/>
-        <h:panelGroup id="indexPanel" layout="block" style="margin: auto; width: 1000px; height: 100%; display: flex; flex-flow: column;">
-            <h:panelGroup layout="block" style="width: 100%; height: 100px; flex: 0 1 auto;">
+        <h:panelGroup id="indexPanel" layout="block"
+                      style="margin: auto; min-width: 1024px; width: 100%; height: 100%; display: flex; flex-flow: column;">
+            <h:panelGroup layout="block" style="width: 100%; flex: 0 1 auto;">
                 <h1 style="text-align: center;">中国种子二维码追溯系统</h1>
             </h:panelGroup>
             <h:panelGroup id="content" layout="block" style="width: 100%; flex: 1 1 auto;">
-                <h:form rendered="#{!request.isUserInRole('user')}" style="height: 95%;">
+                <h:form rendered="#{!request.isUserInRole('user')}">
                     <p:panelGrid id="loginPanel" columns="2" styleClass="transparent" style="margin: auto;">
                         <p:outputLabel for="user" value="用户："/>
                         <p:inputText id="user" value="#{authenticator.user}"/>
@@ -47,14 +48,15 @@
                         <p:password id="password" value="#{authenticator.password}"/>
                         <f:facet name="footer">
                             <h:panelGroup layout="block" styleClass="submit">
-                                <p:commandButton id="loginButton" value="登录" process="@form" update="content"
+                                <p:commandButton id="loginButton" value="登录"
+                                                 process="@form" update="content"
                                                  action="#{authenticator.login}"/>
                             </h:panelGroup>
                         </f:facet>
                     </p:panelGrid>
                     <p:blockUI block="indexPanel" trigger="loginButton" >登陆中...</p:blockUI>
                 </h:form>
-                <p:tabView prependId="false" style="height: 95%;"
+                <p:tabView prependId="false" style="height: 98%;"
                            activeIndex="#{sessionData.tab}"
                            rendered="#{request.isUserInRole('user')}"
                            onTabShow="tabShown(index);">
@@ -85,7 +87,7 @@
                     </p:tab>
                 </p:tabView>
             </h:panelGroup>
-            <h:panelGroup layout="block" style="width: 100%; height: 50px; flex: 0 1 auto; text-align: center;">
+            <h:panelGroup layout="block" style="width: 100%; flex: 0 1 auto; text-align: center;">
                 版权所有 © 2016 成都星楚物流有限公司
             </h:panelGroup>
         </h:panelGroup>
